--- a/src/components/TimeLine.astro
+++ b/src/components/TimeLine.astro
@@ -16,7 +16,7 @@ import biorescate from "../media/bio_rescate.jpg"
 import SortButton from './SortButton.astro';
 ---
 
-<div class="relative flex flex-col mt-3 dark:text-cuteWhite text-blackText max-h-max mb-10 px-10">
+<div class="relative flex flex-col dark:text-cuteWhite text-blackText max-h-max mb-10 px-10">
     <SortButton/>
     <Line height='h-20'/>
 <div class="relative flex flex-col-reverse dark:text-cuteWhite text-blackText max-h-max" id="timeLine">
