little fix profile card

--- a/src/components/SortButton.astro
+++ b/src/components/SortButton.astro
@@ -1,6 +1,6 @@
 ---
 ---
-<div class="lg:absolute lg:right-0 lg:top-24 py-10 px-10 text-center rounded-l-lg hover:bg-darkCornflowerBlue cursor-pointer right_text hide" id="sortedButton">
+<div class="lg:absolute lg:right-0 lg:top-24 py-10 px-10 text-center rounded-l-lg hover:bg-cuteWhite dark:hover:bg-darkCornflowerBlue cursor-pointer right_text hide" id="sortedButton">
 </div>
 
 <style>
