--- a/src/components/ToBeginButton.astro
+++ b/src/components/ToBeginButton.astro
@@ -1,4 +1,4 @@
-<div class="lg:fixed lg:right-0 lg:bottom-24 py-10 px-10 text-center rounded-l-lg hover:bg-darkCornflowerBlue cursor-pointer right_text hidebutton z-30" id="toBeginButton">
+<div class="lg:fixed lg:right-0 lg:bottom-24 py-10 px-10 text-center rounded-l-lg hover:bg-cuteWhite dark:hover:bg-darkCornflowerBlue cursor-pointer right_text hidebutton z-30" id="toBeginButton">
     To the Beginning ▲
 </div>
 
